[gd_scene load_steps=5 format=3 uid="uid://bm1m5rgo3l6uw"]

[ext_resource type="FontFile" uid="uid://ckwg220lfr1gy" path="res://imatges/Race Sport.ttf" id="1_l5icp"]
[ext_resource type="Script" path="res://Escenes/EscenaFinalLladre.gd" id="1_yogk5"]
[ext_resource type="Texture2D" uid="uid://db05gegcg75j1" path="res://imatges/checkered-racing-flag-speed-background_1017-23607_cleanup.png" id="2_iu1ji"]
[ext_resource type="AudioStream" uid="uid://btb0d6e2rnjjp" path="res://game-over-man-136233.mp3" id="4_txel8"]

[node name="EscenaFinalLladre" type="Node2D"]
script = ExtResource("1_yogk5")

[node name="Checkered-racing-flag-speed-background1017-23607Cleanup" type="Sprite2D" parent="."]
position = Vector2(583.75, 322.125)
scale = Vector2(1.86661, 1.58333)
texture = ExtResource("2_iu1ji")

[node name="Label" type="Label" parent="."]
offset_left = 24.0
offset_top = 192.0
offset_right = 1127.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_l5icp")
theme_override_font_sizes/font_size = 55
text = "Final del Joc
El Lladre ha escapat!"
horizontal_alignment = 1

[node name="Game_over" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_txel8")

[node name="Reiniciar" type="Button" parent="."]
offset_left = 488.0
offset_top = 496.0
offset_right = 680.0
offset_bottom = 544.0
theme_override_font_sizes/font_size = 25
text = "REINICIAR"

[node name="Sortir" type="Button" parent="."]
offset_left = 488.0
offset_top = 560.0
offset_right = 680.0
offset_bottom = 603.0
theme_override_font_sizes/font_size = 25
text = "SORTIR"

[connection signal="pressed" from="Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Sortir" to="." method="_on_sortir_pressed"]
